{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 49,
  "lineage": "76d8d48d-8b32-4793-eaff-1aebc2e35977",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b78aaa66ca5bd3a",
            "arn": "arn:aws:ec2:us-east-1:483176634994:elastic-ip/eipalloc-06b78aaa66ca5bd3a",
            "association_id": "eipassoc-045698962bb6403e7",
            "domain": "vpc",
            "id": "eipalloc-06b78aaa66ca5bd3a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c15ffbfada3a02cc",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-3-92-104-70.compute-1.amazonaws.com",
            "public_ip": "3.92.104.70",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-nat-eip",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-nat-eip",
              "Project": "CloudCostOps"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "eipalloc-06b78aaa66ca5bd3a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudcostops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:internet-gateway/igw-0636cf3acc3a9d66c",
            "id": "igw-0636cf3acc3a9d66c",
            "owner_id": "483176634994",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-igw",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-igw",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "igw-0636cf3acc3a9d66c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudcostops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b78aaa66ca5bd3a",
            "association_id": "eipassoc-045698962bb6403e7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-011d90015140cd375",
            "network_interface_id": "eni-0c15ffbfada3a02cc",
            "private_ip": "10.0.1.103",
            "public_ip": "3.92.104.70",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04424ec8e5bc120d1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-nat",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-nat",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "nat-011d90015140cd375",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.cloudcostops",
            "aws_subnet.public_1",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026ff2760ea9e37501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011d90015140cd375",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-026ff2760ea9e3750",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-026ff2760ea9e3750"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.cloudcostops",
            "aws_nat_gateway.cloudcostops",
            "aws_route_table.private_1",
            "aws_subnet.public_1",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-042aab3136efdb63b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011d90015140cd375",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-042aab3136efdb63b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-042aab3136efdb63b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.cloudcostops",
            "aws_nat_gateway.cloudcostops",
            "aws_route_table.private_2",
            "aws_subnet.public_1",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0636cf3acc3a9d66c",
            "id": "r-rtb-084076a536c8dc8df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-084076a536c8dc8df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-084076a536c8dc8df"
          },
          "dependencies": [
            "aws_internet_gateway.cloudcostops",
            "aws_route_table.public",
            "aws_vpc.cloudcostops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:route-table/rtb-026ff2760ea9e3750",
            "id": "rtb-026ff2760ea9e3750",
            "owner_id": "483176634994",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011d90015140cd375",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-rt-1",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-rt-1",
              "Project": "CloudCostOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtb-026ff2760ea9e3750",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:route-table/rtb-042aab3136efdb63b",
            "id": "rtb-042aab3136efdb63b",
            "owner_id": "483176634994",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011d90015140cd375",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-rt-2",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-rt-2",
              "Project": "CloudCostOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtb-042aab3136efdb63b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:route-table/rtb-084076a536c8dc8df",
            "id": "rtb-084076a536c8dc8df",
            "owner_id": "483176634994",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0636cf3acc3a9d66c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-rt",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-rt",
              "Project": "CloudCostOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtb-084076a536c8dc8df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bd021b251a246ae",
            "region": "us-east-1",
            "route_table_id": "rtb-026ff2760ea9e3750",
            "subnet_id": "subnet-018a303bad8d6b923"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtbassoc-09bd021b251a246ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065a434d0daee76fc",
            "region": "us-east-1",
            "route_table_id": "rtb-042aab3136efdb63b",
            "subnet_id": "subnet-07c9c59b2a6cb62f4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtbassoc-065a434d0daee76fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05294495ed8b04a52",
            "region": "us-east-1",
            "route_table_id": "rtb-084076a536c8dc8df",
            "subnet_id": "subnet-04424ec8e5bc120d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtbassoc-05294495ed8b04a52",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0c4557e23a0568",
            "region": "us-east-1",
            "route_table_id": "rtb-084076a536c8dc8df",
            "subnet_id": "subnet-0edf034b26f561c7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "rtbassoc-07b0c4557e23a0568",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:subnet/subnet-018a303bad8d6b923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018a303bad8d6b923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483176634994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-1",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-1",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "subnet-018a303bad8d6b923",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:subnet/subnet-07c9c59b2a6cb62f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9c59b2a6cb62f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483176634994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-2",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-private-2",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "subnet-07c9c59b2a6cb62f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:subnet/subnet-04424ec8e5bc120d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04424ec8e5bc120d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483176634994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-1",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-1",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "subnet-04424ec8e5bc120d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:subnet/subnet-0edf034b26f561c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf034b26f561c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483176634994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-2",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-public-2",
              "Project": "CloudCostOps"
            },
            "vpc_id": "vpc-09979fd95c45e207d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "subnet-0edf034b26f561c7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudcostops",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudcostops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483176634994:vpc/vpc-09979fd95c45e207d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00eb3ff4c35327c83",
            "default_route_table_id": "rtb-090d500cfdf912e9b",
            "default_security_group_id": "sg-0de877f1c928346e1",
            "dhcp_options_id": "dopt-09eaac70658fd11a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09979fd95c45e207d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090d500cfdf912e9b",
            "owner_id": "483176634994",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-vpc",
              "Project": "CloudCostOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudcostops-vpc",
              "Project": "CloudCostOps"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "483176634994",
            "id": "vpc-09979fd95c45e207d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}